[gd_scene load_steps=2 format=2]

[ext_resource path="res://parameters.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="pararect" type="ColorRect" parent="."]
margin_left = -20.0
margin_top = -20.0
margin_right = 1059.0
margin_bottom = 620.0
color = Color( 0, 0, 0, 1 )

[node name="titlepara" type="Label" parent="."]
margin_left = 277.0
margin_top = 35.0
margin_right = 466.0
margin_bottom = 54.0
rect_scale = Vector2( 2.49532, 2.44395 )
custom_colors/font_color = Color( 0.913725, 0.882353, 0.0823529, 1 )
text = "Select Your Ä±Initial Parameters"

[node name="posx" type="Label" parent="."]
margin_left = 156.0
margin_top = 125.0
margin_right = 220.0
margin_bottom = 139.0
rect_scale = Vector2( 1.74507, 1.78794 )
text = "Position X"

[node name="posy" type="Label" parent="."]
margin_left = 449.0
margin_top = 128.0
margin_right = 512.0
margin_bottom = 142.0
rect_scale = Vector2( 1.79407, 1.76286 )
text = "Position Y"

[node name="posz" type="Label" parent="."]
margin_left = 723.0
margin_top = 130.0
margin_right = 787.0
margin_bottom = 144.0
rect_scale = Vector2( 1.82446, 1.69533 )
text = "Position Z"

[node name="velmag" type="Label" parent="."]
margin_left = 468.0
margin_top = 261.0
margin_right = 508.0
margin_bottom = 275.0
rect_scale = Vector2( 1.98779, 1.93069 )
text = "Speed"
align = 1

[node name="velx" type="Label" parent="."]
margin_left = 132.0
margin_top = 408.0
margin_right = 282.0
margin_bottom = 422.0
rect_scale = Vector2( 1.20141, 1.36405 )
text = "X Component - Velocity"

[node name="vely" type="Label" parent="."]
margin_left = 422.0
margin_top = 405.0
margin_right = 571.0
margin_bottom = 419.0
rect_scale = Vector2( 1.22333, 1.34761 )
text = "Y Component - Velocity"

[node name="velz" type="Label" parent="."]
margin_left = 695.0
margin_top = 405.0
margin_right = 845.0
margin_bottom = 419.0
rect_scale = Vector2( 1.16964, 1.3826 )
text = "Z Component - Velocity"

[node name="posxedit" type="TextEdit" parent="."]
margin_left = 193.0
margin_top = 159.0
margin_right = 245.0
margin_bottom = 194.0
text = "192.2"

[node name="velzedit" type="TextEdit" parent="."]
margin_left = 762.0
margin_top = 435.0
margin_right = 815.0
margin_bottom = 470.0
text = "0"

[node name="velyedit" type="TextEdit" parent="."]
margin_left = 487.0
margin_top = 436.0
margin_right = 539.0
margin_bottom = 471.0
text = "10"

[node name="velxedit" type="TextEdit" parent="."]
margin_left = 194.0
margin_top = 436.0
margin_right = 246.0
margin_bottom = 471.0
text = "1"

[node name="speededit" type="TextEdit" parent="."]
margin_left = 490.0
margin_top = 298.0
margin_right = 542.0
margin_bottom = 333.0
text = "5.5"

[node name="poszedit" type="TextEdit" parent="."]
margin_left = 764.0
margin_top = 161.0
margin_right = 816.0
margin_bottom = 196.0
text = "0"

[node name="posyedit" type="TextEdit" parent="."]
margin_left = 490.0
margin_top = 161.0
margin_right = 542.0
margin_bottom = 196.0
text = "-96.1"

[node name="Button" type="Button" parent="."]
margin_left = 469.0
margin_top = 512.0
margin_right = 544.0
margin_bottom = 552.0
text = "Launch!"

[node name="red1" type="ColorRect" parent="."]
margin_left = 177.0
margin_top = 159.0
margin_right = 191.0
margin_bottom = 194.0
rect_pivot_offset = Vector2( -195, 204 )
color = Color( 0.839216, 0.0745098, 0.0745098, 1 )

[node name="red2" type="ColorRect" parent="."]
margin_left = 178.0
margin_top = 436.0
margin_right = 192.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( -195, 204 )
color = Color( 0.839216, 0.0745098, 0.0745098, 1 )

[node name="green1" type="ColorRect" parent="."]
margin_left = 471.0
margin_top = 436.0
margin_right = 485.0
margin_bottom = 471.0
rect_pivot_offset = Vector2( 8, 28 )
color = Color( 0.054902, 0.6, 0.141176, 1 )

[node name="green2" type="ColorRect" parent="."]
margin_left = 475.0
margin_top = 161.0
margin_right = 489.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 8, 28 )
color = Color( 0.054902, 0.6, 0.141176, 1 )

[node name="blue1" type="ColorRect" parent="."]
margin_left = 748.0
margin_top = 161.0
margin_right = 762.0
margin_bottom = 196.0
rect_pivot_offset = Vector2( 11, 30 )
color = Color( 0.0509804, 0.0470588, 0.541176, 1 )

[node name="blue2" type="ColorRect" parent="."]
margin_left = 746.0
margin_top = 435.0
margin_right = 760.0
margin_bottom = 470.0
rect_pivot_offset = Vector2( 11, 30 )
color = Color( 0.0509804, 0.0470588, 0.541176, 1 )

[node name="white" type="ColorRect" parent="."]
margin_left = 474.0
margin_top = 297.0
margin_right = 488.0
margin_bottom = 332.0
rect_pivot_offset = Vector2( 11, 30 )

[connection signal="text_changed" from="posxedit" to="." method="_on_posxedit_text_changed"]
[connection signal="text_changed" from="velzedit" to="." method="_on_velzedit_text_changed"]
[connection signal="text_changed" from="velyedit" to="." method="_on_velyedit_text_changed"]
[connection signal="text_changed" from="velxedit" to="." method="_on_velxedit_text_changed"]
[connection signal="text_changed" from="speededit" to="." method="_on_speededit_text_changed"]
[connection signal="text_changed" from="poszedit" to="." method="_on_poszedit_text_changed"]
[connection signal="text_changed" from="posyedit" to="." method="_on_posyedit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
